Ensure connection indicator is visible both light and dark modes

--- a/html/css/app.css
+++ b/html/css/app.css
@@ -185,3 +185,7 @@ td {
   height: 1px;
   opacity: 0%;
 }
+
+#connection-indicator {
+  color: white;
+}
